--- a/App/package.json
+++ b/App/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "SYN Group, Inc <syn.group@pm.me>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "grammy": "^1.3.3"
+  }
 }
