--- a/App/package.json
+++ b/App/package.json
@@ -10,6 +10,7 @@
   "author": "SYN Group, Inc <syn.group@pm.me>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "grammy": "^1.3.3"
   }
 }
