--- a/App/package.json
+++ b/App/package.json
@@ -10,6 +10,7 @@
   "author": "SYN Group, Inc <syn.group@pm.me>",
   "license": "MIT",
   "dependencies": {
+    "ascii-table": "0.0.9",
     "dotenv": "^10.0.0",
     "fs": "0.0.1-security",
     "grammy": "^1.3.3"
